Basic structure in angular